# TC2008B

CallApi/: Classifier.cs  Ollama.cs  Program.cs  apiDigest.sln
Classifier/: .dockerignore  Dockerfile
Classifier/app/: main.py  predict.html  pyproject.toml
Classifier/backup/: backbones.py  classifiers.py  model_preparing.py  models.py
Detector/: add_background.py  check_cuda.py  download_dataset.py  filter.py  train.py
Detector/Rugoso_Test-1/: README.dataset.txt  README.roboflow.txt  data.yaml
Detector/Rugoso_Test-1/train/: labels.cache
Detector/Rugoso_Test-1/train/labels/: 00000_jpg.rf.e236410a8e73bbdfa8add16838c5c568.txt  00001_jpg.rf.52a0258c381a6dabae78fadd5251529a.txt  00003_jpg.rf.9cafb14548a5c863469cc04e70b4daed.txt  00004_jpg.rf.535f3c45be71ed19a279d4c41922e9e8.txt  00006_jpg.rf.d1c080213aab46b03710792d784cb209.txt  00008_jpg.rf.78b806b6361723e4f7652cbe21ec0201.txt  00010_jpg.rf.d6ea2d3b15041e3784360533ffaec188.txt  00011_jpg.rf.44edd90480ca412c39dd26a38ffc96b8.txt  00013_jpg.rf.9764383af68c08dc7ce40b63f466e4db.txt  00015_jpg.rf.3c29c48241eb46059d279620fdf06eeb.txt  00016_jpg.rf.f1f0f7dc0f1c9e8e3c2167cc3571b93a.txt  00017_jpg.rf.1fb685c9307c8d7aecb08fa2ac312aa7.txt  00020_jpg.rf.cb07ed148f85755e8862b98dceaf3f29.txt  00021_jpg.rf.5868d3571962d376a32dfe8fa1ef2bcc.txt  00022_jpg.rf.794f4326596b7efcfe367e924775af7a.txt  (+290 more)
Detector/Rugoso_Test-1/valid/: labels.cache
Detector/Rugoso_filtered/: data.yaml
Detector/Rugoso_filtered/train/: labels.cache
Detector/Rugoso_filtered/valid/: labels.cache
Detector/trained_model/: args.yaml  results.csv
(+372 files in other folders)
